# otel-lib

./: .gitignore  Cargo.toml  Makefile  README.md  SUPPORT.md  coverage_threshold.toml
.github/workflows/: check.yaml  test.yaml
ci/: build-deps.sh  check.sh  coverage.sh  minimal-deps.sh  test.sh
ci/jq/: coverage.jq
examples/sample-app/: Cargo.toml  README.md
examples/sample-app/src/: main.rs  metrics.rs
src/: config.rs  filtered_log_processor.rs  lib.rs  loggers.rs  syslog_writer.rs
tests/: integration_test.rs  mocks.rs
